[package]
name = "future_pubsub"
version = "0.1.3"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A tokio based publish-subscibe channel"
repository = "https://github.com/AtsukiTak/future-pubsub"
readme = "README.md"
keywords = ["pubsub", "channel", "spmc"]
categories = ["asynchronous"]

[dependencies]
futures = "0.1"

[dev-dependencies]
tokio-core = "0.1"
