[package]
name = "ex-futures"
version = "0.4.8"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
license = "MIT/Apache-2.0"
description = "An extension of `futures`"
repository = "https://github.com/AtsukiTak/ex-futures"
readme = "README.md"
keywords = ["futures", "channel", "pubsub"]
categories = ["asynchronous"]

[dependencies]
futures = "0.1"

[dev-dependencies]
tokio-core = "0.1"
